# job-configurator

./: LICENSE  README.md  pyproject.toml
app/: Makefile  __init__.py  app.py
app/models/: login.py  workflow_parser.py
app/routes/: utils.py  workflow.py
dags/: pistis_fingerprint_dag.py  pistis_job_dag.py  pistis_job_dag_periodic.py  pistis_workflow_dag.py  pistis_workflow_dag_periodic.py
deployments/: docker-compose.yml
deployments/app/: Dockerfile
templates/: data_check_in_api_template.json  data_check_in_ftp_template.json  data_check_in_template.json  data_distribution_json_ld_template.json  data_transformation_template.json  dataset_json_ld_template.json  insights_generator_template.json
tests/: __init__.py
tests/functional/: test_run_workflow.py
