# Copyright © 2026 Bull® SAS. All rights reserved
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "pistis-job-configurator"
version = "0.1.0"
description = ""
authors = ["Ivan Martinez Rodriguez & Sergio Salmerón Majadas <ivan.martinez@atos.net>"]
readme = "README.md"
packages = [{include = "models", from="app"}, {include = "routes", from="app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.3"
flask-restx = "^1.2.0"
PyJWT = "^2.8.0"
pytest-flask = "^1.3.0"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.0"
requests = "^2.32.3"
minio = "^7.2.7"
flask-swagger-ui = "^4.11.1"
jsoninja = "^1.0.4"
psycopg2 = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
